--- a/P4/app/src/main/AndroidManifest.xml
+++ b/P4/app/src/main/AndroidManifest.xml
@@ -36,6 +36,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity
+            android:name="com.example.entrenamientosinterfaces.EstadisticasActivity"
+            android:label="@string/title_activity_conf"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
